--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-native-drawer": "^2.3.0",
     "react-native-lock": "^0.5.0",
     "react-native-maps": "0.13.0",
+    "react-native-popup-dialog": "^0.7.22",
     "react-native-router-flux": "^3.37.0",
     "react-native-vector-icons": "^4.0.0",
     "react-navigation": "^1.0.0-beta.7",
