--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "apisauce": "^0.10.0",
+    "axios": "^0.16.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "format-json": "^1.0.3",
     "lodash": "^4.17.2",
@@ -40,6 +41,8 @@
     "react-native-maps": "0.13.0",
     "react-native-popup-dialog": "^0.7.22",
     "react-native-router-flux": "^3.37.0",
+    "react-native-user-defaults": "^0.1.5",
+    "react-native-userdefaults-ios": "^0.1.3",
     "react-native-vector-icons": "^4.0.0",
     "react-navigation": "^1.0.0-beta.7",
     "react-redux": "^5.0.2",
