--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-native-maps": "0.13.0",
     "react-native-popup-dialog": "^0.7.22",
     "react-native-router-flux": "^3.37.0",
+    "react-native-scrollable-tab-view": "^0.6.3",
     "react-native-user-defaults": "^0.1.5",
     "react-native-userdefaults-ios": "^0.1.3",
     "react-native-vector-icons": "^4.0.0",
